# dxrf

./: CMakeLists.txt  LICENSE  README.md  gen_build_win.bat
assets/scene/: objects.go
assets/scene/scene_test/: New Material.mat  cone.asset.cone.mesh
src/: DeviceResources.cpp  DeviceResources.h  DirectXRaytracingHelper.h  HlslCompat.h  Main.cpp  RayTracingHlslCompat.h  Raytracing.hlsl  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h
